--- a/src/styles/pages/Discover.module.scss
+++ b/src/styles/pages/Discover.module.scss
@@ -1,7 +1,8 @@
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 0 16px;
+    overflow-x: scroll;
     background: linear-gradient(175deg, #FDEDE0 4.38%, #FAE7FA 33.96%, #F1EFFC 64.65%, rgba(241, 239, 252, 0.00) 94.55%);
 }
 
@@ -9,6 +10,12 @@
     display: flex;
     align-items: center;
     padding-top: 10px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    height: 70px;
+    background: #FDEDE0;
 
     .logo {
         width: 50px;
@@ -17,7 +24,7 @@
 
     .search_area {
         background-color: #fff;
-        flex: 1;
+        width: 290px;
         height: 39px;
         margin-left: 20px;
         border-radius: 52px;
@@ -40,6 +47,8 @@
             margin-left: 10px;
         }
     }
+}
 
-
+.diy_page_view {
+    padding-top: 58px;
 }
