--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -17,7 +17,7 @@
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fff;
+  background-color: #333;
   color: #333;
 
   code {
@@ -85,7 +85,7 @@ input {
 }
 
 .adm-center-popup-body.adm-dialog-body {
-  background: #fff !important;
+  background: #333 !important;
 }
 
 // 设置选中的颜色
