--- a/src/styles/TabRoutes.module.scss
+++ b/src/styles/TabRoutes.module.scss
@@ -3,7 +3,7 @@
     height: 48px;
     object-fit: contain;
     margin-bottom: 10px;
-    color: #e1d2d2;
+    color: #999;
 
     &.active {
         color: var(--adm-color-primary);
