--- a/src/styles/pages/Discover.module.scss
+++ b/src/styles/pages/Discover.module.scss
@@ -3,19 +3,18 @@
     height: 100%;
     padding: 0 16px;
     overflow-x: scroll;
-    background: linear-gradient(175deg, #FDEDE0 4.38%, #FAE7FA 33.96%, #F1EFFC 64.65%, rgba(241, 239, 252, 0.00) 94.55%);
+    background: #000;
 }
 
 .search_view {
     display: flex;
     align-items: center;
-    padding-top: 10px;
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 10;
-    height: 70px;
-    background: #FDEDE0;
+    z-index: 1;
+    height: 60px;
+    background: #000;
 
     .logo {
         width: 50px;
@@ -23,7 +22,7 @@
     }
 
     .search_area {
-        background-color: #fff;
+        background-color: #252525;
         width: 290px;
         height: 39px;
         margin-left: 20px;
@@ -38,7 +37,7 @@
         }
 
         .text {
-            color: #CCC;
+            color: #999;
             font-family: PingFang SC;
             font-size: 14px;
             font-style: normal;
@@ -50,5 +49,5 @@
 }
 
 .diy_page_view {
-    padding-top: 58px;
+    padding-top: 55px;
 }
