--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -4,7 +4,7 @@
         height: 24px;
         object-fit: contain;
         margin-bottom: 10px;
-        color: #e1d2d2;
+        color: #999;
 
         &.active {
             color: var(--adm-color-primary);
@@ -25,5 +25,6 @@
     height: 64px;
     z-index: 1000;
     box-shadow: var(--my-shadow);
-    background: #fff;
+    background: #000;
+    border-top: 1px solid #1f1f1f;
 }
