--- a/src/components/diy/styles/BbList.module.scss
+++ b/src/components/diy/styles/BbList.module.scss
@@ -9,7 +9,7 @@
         align-items: center;
 
         .left {
-            color: #fff;
+            color: #333;
             font-family: Roboto;
             font-size: 20px;
             font-style: normal;
@@ -46,7 +46,7 @@
 
         .walf_text {
             width: 172px;
-            color: #fff;
+            color: #333;
             font-family: PingFang SC;
             font-size: 14px;
             font-weight: 400;
