--- a/src/styles/pages/Classify.module.scss
+++ b/src/styles/pages/Classify.module.scss
@@ -1,8 +1,6 @@
 .container {
     width: 100%;
-    height: calc(100vh - 64px);
-}
-
-.children_view {
+    height: 100vh;
+    padding: 0 14px;
     margin-top: 50px;
 }
