--- a/src/components/diy/styles/BbGird.module.scss
+++ b/src/components/diy/styles/BbGird.module.scss
@@ -9,7 +9,7 @@
         align-items: center;
 
         .left {
-            color: #fff;
+            color: #333;
             font-family: Roboto;
             font-size: 20px;
             font-style: normal;
@@ -17,12 +17,24 @@
         }
 
         .right {
-            width: 24px;
-            height: 24px;
+            display: flex;
+            align-items: center;
+
+            .text {
+                color: #666;
+                font-family: PingFang SC;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                text-transform: capitalize;
+                margin-bottom: 2px;
+                margin-right: 4px;
+            }
 
             .more_icon {
-                width: 100%;
-                height: 100%;
+                width: 12px;
+                height: 12px;
             }
         }
     }
@@ -44,7 +56,7 @@
 
         .grid_text {
             width: 112px;
-            color: #fff;
+            color: #333;
             font-family: PingFang SC;
             font-size: 14px;
             font-weight: 400;
