--- a/src/styles/TabRoutes.module.scss
+++ b/src/styles/TabRoutes.module.scss
@@ -1,16 +1,54 @@
-.tabIcon {
-    width: 48px;
-    height: 48px;
-    object-fit: contain;
-    margin-bottom: 10px;
-    color: #999;
-
-    &.active {
-        color: var(--adm-color-primary);
-    }
-}
-
 .tabBar {
     max-width: 500px;
     margin: 0 auto;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+    font-weight: 600;
+    height: 64px;
+    z-index: 1000;
+}
+
+.footer_black {
+    background: #000;
+    border-top: 1px solid #1f1f1f;
+    box-shadow: var(--my-shadow);
+    --adm-color-primary: #fff;
+
+    .tabIcon {
+        width: 48px;
+        height: 48px;
+        object-fit: contain;
+        margin-bottom: 10px;
+        color: #999;
+
+        &.active {
+            color: var(--adm-color-primary);
+        }
+    }
+}
+
+.footer_white {
+    background: #fff;
+    --adm-color-primary: #FD5295;
+
+    .tabIcon {
+        width: 48px;
+        height: 48px;
+        object-fit: contain;
+        margin-bottom: 10px;
+        color: #ccc;
+
+        &.active {
+            color: var(--adm-color-primary);
+        }
+    }
 }
