--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,11 +5,12 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #fff;
     color: #333;
 }
 
 :root:root {
-    --my-primary-color: #fff;
+    --my-primary-color: #F9367E;
     --my-button-color: linear-gradient(90deg, #FF504F 0%, #EC04D5 97.14%);
     --my-shadow: 0 0px 16px -8px rgba(0, 0, 0, 0.48), 0 0px 28px 0 rgba(0, 0, 0, 0.1),
         0 0px 48px 16px rgba(0, 0, 0, 0.03);
@@ -17,7 +18,7 @@ body {
     --adm-color-success: #00b578;
     --adm-color-warning: #ff8f1f;
     --adm-color-danger: #ff3141;
-
+    --nav-margin-left: 16px;
     --adm-color-white: #ffffff;
     --adm-color-text: #333333;
     --adm-color-text-secondary: #E1D2D2;
@@ -108,6 +109,7 @@ body {
     }
 }
 
-*::-webkit-scrollbar {
-    display: none;
+
+.adm-nav-bar-back {
+ margin-right: 0 !important;
 }
