--- a/src/styles/pages/Discover.module.scss
+++ b/src/styles/pages/Discover.module.scss
@@ -1,8 +1,9 @@
 .container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 64px);
     padding: 0 16px;
     overflow-x: scroll;
+    scroll-behavior: smooth;
     background: linear-gradient(175deg, #FDEDE0 4.38%, #FAE7FA 33.96%, #F1EFFC 64.65%, rgba(241, 239, 252, 0.00) 94.55%);
 }
 
@@ -52,6 +53,6 @@
     padding-top: 55px;
 }
 
-.search_gift{
+.search_gift {
     margin-left: 10px;
 }
