--- a/src/styles/pages/Me.module.scss
+++ b/src/styles/pages/Me.module.scss
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 64px);
     padding: 20px 15px;
     background: linear-gradient(175deg, #FDEDE0 4.38%, #FAE7FA 33.96%, #F1EFFC 64.65%, rgba(241, 239, 252, 0.00) 94.55%);
 }
