--- a/src/components/styles/PageLayout.module.scss
+++ b/src/components/styles/PageLayout.module.scss
@@ -1,8 +1,6 @@
 .container {
     width: 100%;
     height: 100vh;
-}
-
-.children_view {
-    margin-top: 50px;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
 }
