--- a/src/styles/pages/Language.module.scss
+++ b/src/styles/pages/Language.module.scss
@@ -1,8 +1,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    margin-top: 50px;
-    padding: 0 12px;
+    padding: 50px 12px 0px 12px;
     overflow-x: scroll;
     scroll-behavior: smooth;
 }
