--- a/src/styles/pages/MyList.module.scss
+++ b/src/styles/pages/MyList.module.scss
@@ -35,9 +35,7 @@
 .content {
     width: 100%;
     height: calc(100% - 64px);
-    margin-top: 55px;
-    margin-bottom: 80px;
-    padding: 0 12px;
+    padding: 55px 12px 0 12px;
 }
 
 .play_List_cards {
